<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="pl.nanoid.atlasotoskopii.ui.List.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="pl.nanoid.atlasotoskopii.ui.Info.InfoFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_pictures"
        android:name="pl.nanoid.atlasotoskopii.ui.Pictures.PicturesFragment"
        android:label="@string/title_pictures"
        tools:layout="@layout/fragment_grid" />
</navigation>