<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMoreLightDark"
    >

    <TextView
        android:id="@+id/scheme_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorLightDark"
        android:fontFamily="@font/jura_semibold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/textColorDarker"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheme_message">

        <ImageView
            android:id="@+id/scheme_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded"
            android:contentDescription="@string/action_settings"
            android:padding="1dp"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher_foreground" />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scheme_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:background="@color/colorLightDark"
                    android:fontFamily="@font/jura_semibold"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/description_text"
                    android:textAllCaps="true"
                    android:textColor="@color/textColorDarker"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/scheme_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/jura"
                    android:padding="3dp"
                    android:text="@string/action_settings"
                    android:textColor="@color/textColorDarker"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detailed_treatmennt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:background="@color/colorLightDark"
                    android:fontFamily="@font/jura_semibold"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/treatment_text"
                    android:visibility="visible"
                    android:textAllCaps="true"
                    android:textColor="@color/textColorDarker"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detailed_treatment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/jura"
                    android:padding="3dp"
                    android:text="@string/action_settings"
                    android:textColor="@color/textColorDarker"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
