<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_activity_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:angle="90"
    android:background="@color/colorMoreLightDark"
    tools:context=".ui.Start.StartActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ear_logo_sao" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/jura_semibold"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/app_name_of_pediatric"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFEE58"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/jura_semibold"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/app_name_otoscopy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFA726"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:elevation="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/jura_semibold"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/app_name_small_atlas"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#A7FFEB"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:elevation="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/jura_semibold"
        android:shadowColor="#625C5C"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="Nano-ID"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#21C529"
        android:textSize="10sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/twinkle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:elevation="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/jura_semibold"

        android:text="Click anywhere on the screen."
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>